css-grid: fix on mobile

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,7 +8,57 @@ Template:       wp-bootstrap-starter
 Version:        0.1.0
 */
 
+// #  Navigation
 
+.navbar {
+  min-height: 3rem;
+}
+
+#main-nav {
+  position: relative;
+  top: 2.2em;
+  background-color: #333;
+  z-index: 2;
+  max-width: 800px;
+}
+
+.navbar-nav li {
+  padding-right: 1.8em;
+}
+
+// #	Pagination
+// depends on themes/wp-bootstrap-starter/template-parts/content.php
+
+$navigate-size: 5vw;
+
+.navigate {
+	position: fixed;
+	top: 70vh;
+  	z-index: 4;
+}
+
+.navigate::before {
+  content: "";
+  display: inline-block;
+  background-size: $navigate-size $navigate-size;
+  height: $navigate-size;
+  width: $navigate-size;
+  
+}
+
+.navigate--previous {
+	left: 1em;
+  &::before{
+    background-image: url(assets/img/icons/arrow-left-o.svg);
+  }
+}
+
+.navigate--next {
+	right: 2em;
+  &::before{
+    background-image: url(assets/img/icons/arrow-right-o.svg);
+  }
+}
 
 
 /* #	Page-grid 		*/
@@ -16,7 +66,7 @@ Version:        0.1.0
 .page-grid .entry-content {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-auto-rows: minmax(100px, auto);
+  grid-template-rows: repeat(8, 6em);
 }
 
 .page-grid .entry-content figure:nth-child(1) {
